--- a/selectors.html
+++ b/selectors.html
@@ -71,6 +71,14 @@
                 <button>answer</button>
             </span>
             <hr />
+
+            <div>
+                <p> A paragraph is a self-contained unit of discourse in writing that deals with a particular point or idea. It typically consists of a group of related sentences that focus on a single topic, providing unity and coherence to the writing. Good paragraphing is essential for effective communication, as it helps reccont communication</p>
+                <input type="radio" id="yes" name="agreement">
+                <label for="yes">Yes</label>
+                <input type="radio" id="no" name="agreement">
+                <label for="no">No</label>
+            </div>
     </main>
   </body>
 </html>
