--- a/spotifyclone.html
+++ b/spotifyclone.html
@@ -24,7 +24,25 @@
                     <a href="#">Search</a>
                 </div>
             </div>
-            <div class="library"></div>
+            <div class="library">
+                <div class="options">
+                    <div class="lib-option">
+                        <img src="library_icon.png">
+                        <a href="#">Your Library</a>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-solid fa-plus"></i>
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </div>
+                </div>
+                <div class=" lib-box">
+                    <div class="box">
+                        <p class="box-p1">Create Your First Playlist</p>
+                        <p class="box-p2">It's easy will help you</p>
+                        <button class="badge">Create Playlist</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="main-content">main content</div>
         <div class="music-player">music player</div>
